# GenICam

./: .gitignore  CMakeLists.txt  README.md
apps/: genicam_capture.cpp
config/: GEC501M-genicam.xml
include/genicam/: fits_writer.hpp  genicam_camera.hpp
scripts/: genicam_live.sh
src/: fits_writer.cpp  genicam_camera.cpp
tests/: test_unpack.cpp
tools/: genicam_live.cpp
